--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es2016",
-    "jsx": "preserve",
-    "module": "commonjs",
+    "target": "ESNext",
+    "module": "ESNext",
+
+    "strict": true,
+
     "allowJs": true,
-    "outDir": "./dist",
+    "jsx": "preserve",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+
+    "outDir": "./dist"
   },
   "exclude": ["node_modules", "dist", "client"]
 }
