--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "module": "ESNext",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
 
     "strict": true,
 
@@ -11,7 +12,13 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
 
-    "outDir": "./dist"
+    "outDir": "./dist",
+
+    "baseUrl": "src/.",
+    "paths": {
+      "@middlewares/*": ["middlewares/*"],
+      "@/*": ["*"]
+    }
   },
   "exclude": ["node_modules", "dist", "client"]
 }
