--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "scripts": {
     "start": "ts-node src/server.ts",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "build": "swc src -d dist --source-maps --copy-files",
+    "build-tsc": "tsc && tsc-alias"
   },
   "keywords": [],
   "author": "Jae0",
@@ -14,6 +16,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
+    "@swc/cli": "^0.6.0",
+    "@swc/core": "^1.10.7",
     "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
@@ -27,6 +31,7 @@
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3"
   }
