--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "description": "Jae0's Blog Server",
   "dependencies": {
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
@@ -21,6 +22,7 @@
     "@swc/core": "^1.10.7",
     "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@types/express": "^5.0.0",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.7",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
     "@typescript-eslint/parser": "^8.20.0",
