--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@services/*": ["services/*"],
       "@controllers/*": ["controllers/*"],
       "@utils/*": ["utils/*"],
+      "@config/*": ["config/*"],
       "@/*": ["*"]
     }
   },
