✏️ Feat :  path alias 관련 수정

--- a/.prettierrc
+++ b/.prettierrc
@@ -19,6 +19,13 @@
     "dotenv",
 
     "^@middleware",
+    "^@constants",
+    "^@services",
+    "^@controllers",
+    "^@utils",
+    "^@config",
+    "^@routes",
+    "^@interfaces",
     "^@",
 
     "^[../]",
