--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "Jae0's Blog Server",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase": "^11.2.0",
@@ -22,6 +23,7 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@trivago/prettier-plugin-sort-imports": "^5.2.1",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.7",
