--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "ts-node src/server.ts",
     "dev": "nodemon",
-    "build": "swc src -d dist --source-maps --copy-files",
+    "build": "tsc && tsc-alias",
     "build-tsc": "tsc && tsc-alias"
   },
   "keywords": [],
